fix all problem